--- a/app/modules/dataset/templates/dataset/view_dataset.html
+++ b/app/modules/dataset/templates/dataset/view_dataset.html
@@ -35,13 +35,22 @@
 
         <div class="card">
             <div class="card-body">
-                <div class="d-flex align-items-center justify-content-between">
-                    <h1><b>{{ dataset.ds_meta_data.title }}</b></h1>
+                <div class="d-flex align-items-start justify-content-between">
+        
                     <div>
-                        <span class="badge bg-secondary">{{ dataset.get_cleaned_publication_type() }}</span>
+                        <h1><b>{{ dataset.ds_meta_data.title }}</b></h1>
+                        <p class="text-secondary">{{ dataset.created_at.strftime('%B %d, %Y at %I:%M %p') }}</p>
+                    </div>
+
+                    <div class="text-end"> 
+                        <div>
+                            <span class="badge bg-secondary">{{ dataset.get_cleaned_publication_type() }}</span>
+                        </div>
+                        <p class="text-secondary mt-1">
+                            <i data-feather="arrow-down" class="me-1"></i>Nº downloads: {{ dataset.download_count }} 
+                        </p>
                     </div>
                 </div>
-                <p class="text-secondary">{{ dataset.created_at.strftime('%B %d, %Y at %I:%M %p') }}</p>
 
                 <div class="row mb-4">
 
