--- a/app/modules/dataset/templates/dataset/view_dataset.html
+++ b/app/modules/dataset/templates/dataset/view_dataset.html
@@ -170,21 +170,27 @@
             {% if dataset.ds_meta_data.dataset_doi %}
             <div class="card-body" style="padding-top: 0px">
 
-                <div id="dataset_doi_uvlhub" style="display: none">
-                    {{ dataset.get_uvlhub_doi() }}
-                </div>
-
-                <button type="button" class="btn doi_button btn-sm" onclick="copyText('dataset_doi_uvlhub')">
-                    <span class="button_doi_id">
-                        <i data-feather="clipboard" class="center-button-icon" style="cursor: pointer"></i>
-                        <b>DOI</b>
-                    </span>
-                    <span class="doi_text">
-                        {{ dataset.get_uvlhub_doi() }}
-                    </span>
-                </button>
+                <div class="d-flex justify-content-between align-items-center">
                 
-                <div id="dataset_doi_uvlhub" style="display: none">
+                    <button type="button" class="btn doi_button btn-sm" onclick="copyText('dataset_doi_uvlhub')">
+                        <span class="button_doi_id">
+                            <i data-feather="clipboard" class="center-button-icon" style="cursor: pointer"></i>
+                            <b>DOI</b>
+                        </span>
+                        <span class="doi_text">
+                            {{ dataset.get_uvlhub_doi() }}
+                        </span>
+                    </button>
+
+                    <a href="{{ url_for('dataset.get_dataset_stats', dataset_id=dataset.id) }}" 
+                    class="btn btn-primary btn-sm"
+                    style="border-radius: 5px; cursor: pointer;">
+                        
+                        <i data-feather="bar-chart-2" class="center-button-icon"></i>
+                        Statistics
+                    </a>
+                
+                </div> <div id="dataset_doi_uvlhub" style="display: none">
                     {{ dataset.get_uvlhub_doi() }}
                 </div>
                 
