--- a/app/modules/explore/templates/explore/index.html
+++ b/app/modules/explore/templates/explore/index.html
@@ -88,10 +88,13 @@
                         <div class="col-lg-6">
                             <div class="mb-3">
                                 <label class="form-label" for="community_id">Filter by Community</label>
-                                <select class="form-control" id="community_id" name="community_id">
+                                <select class="form-control community-select" id="community_id" name="community_id">
                                     <option value="">Any Community</option>
                                     {% for community in communities %}
-                                        <option value="{{ community.id }}">
+                                        <option 
+                                            value="{{ community.id }}" 
+                                            data-logo-url="{{ url_for('dataset.serve_community_logo', community_id=community.id) }}"
+                                            >
                                             {{ community.name }}
                                         </option>
                                     {% endfor %}
