feat: Nueva vista

--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -148,6 +148,13 @@ chico sundermann">
                         </a>
                     </li>
 
+                    <li class="sidebar-item {{ 'active' if request.endpoint == 'profile.manage_account' else '' }}">
+                        <a class="sidebar-link" href="{{ url_for('profile.manage_account') }}">
+                            <i class="align-middle" data-feather="settings"></i> <span
+                                 class="align-middle">Manage Account</span>
+                        </a>
+                    </li>
+
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="{{ url_for('auth.logout') }}">
                             <i class="align-middle" data-feather="log-out"></i> <span
