--- a/app/modules/public/templates/public/index.html
+++ b/app/modules/public/templates/public/index.html
@@ -126,28 +126,16 @@
                     
                         <h1 class="h2 mb-3">
                     
-                            <h4 class="h4 mb-3" class="stats-color">
+                           <h4 class="h4 mb-3" class="stats-color">
                                 <i data-feather="database" class="align-middle mr-2 stats-color"></i>&nbsp;{{ datasets_counter }} datasets
                             </h4>
-                    
-                            <h4 class="h4 mb-3" class="stats-color">
-                                <i data-feather="file" class="align-middle mr-2 stats-color"></i>&nbsp;{{ feature_models_counter }} feature models
-                            </h4>
-                    
+                        
                             <h4 class="h4 mb-3" class="stats-color">
                                 <i data-feather="eye" class="align-middle mr-2 stats-color"></i>&nbsp;{{ total_dataset_views }} datasets viewed
                             </h4>
-                    
-                            <h4 class="h4 mb-3" class="stats-color">
-                                <i data-feather="eye" class="align-middle mr-2 stats-color"></i>&nbsp;{{ total_feature_model_views }} feature models viewed
-                            </h4>
-                    
-                            <h4 class="h4 mb-3" class="stats-color">
-                                <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;{{ total_dataset_downloads }} datasets downloaded
-                            </h4>
-                    
+                        
                             <h4 class="h4" class="stats-color">
-                                <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;{{ total_feature_model_downloads }} feature models downloaded
+                                <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;{{ total_dataset_downloads }} datasets downloaded
                             </h4>
                     
                         </h1>
@@ -167,13 +155,8 @@
                     
                             <h2> <b>Related publication</b> </h2>
                             
-                            David Romero-Organvidez, José A. Galindo, Chico Sundermann, Jose-Miguel Horcas, David Benavides. 
-                            <i>UVLHub: A feature model data repository using UVL and open science principles</i>,
-                            Journal of Systems and Software,
-                            2024,
-                            112150,
-                            ISSN 0164-1212,
-                            <a href="https://doi.org/10.1016/j.jss.2024.112150" target="_blank">https://doi.org/10.1016/j.jss.2024.112150</a>
+                            CervezaHub Team (2025) - Members of Team 1 and 2 - Evolution and Configuration Management, 2025
+                            <i>CervezaHub: A CSV data repository using open science principles</i>
                     
                         </div>
                     
@@ -207,7 +190,7 @@
 
                             <div class="card-body card-body-slim">
 
-                                What are you waiting for to upload your fantastic feature models in UVL format?
+                                What are you waiting for to upload your fantastic feature models in CSV format?
 
                                 <div class="row mt-2">
 
@@ -240,32 +223,37 @@
 
                 <div class="col-12">
 
-                    <div class="card card-dark">
+                            <div class="card card-dark">
 
-                        <h2 class="card-title card-title-light">
-                            What is <b>uvlhub.io</b>?
-                        </h2>
+                                <h2 class="card-title card-title-light">
+                                    What is <b>cervezahub.io</b>?
+                                </h2>
 
-                        <div class="card-body card-body-slim">
+                                <div class="card-body card-body-slim">
 
-                            <strong>uvlhub.io</strong> is a repository of feature models in UVL format integrated with
-                            Zenodo and FlamaPy developed by DiversoLab
+                                    <strong>cervezahub.io</strong> is a repository of beer datasets in CSV format, 
+                                    integrated with Zenodo.
 
-                        </div>
+                                </div>
 
-                        <h2 class="card-title card-title-light">
-                            Can I contribute?
-                        </h2>
+                                <h2 class="card-title card-title-light">
+                                    Can I contribute?
+                                </h2>
 
-                        <div class="card-body card-body-slim">
+                                <div class="card-body card-body-slim">
 
-                            Sure! You can make a fork of our official repository on GitHub,
-                            create fantastic features and then make a pull request to us.
+                                    Sure! You can make a fork of our official repository on GitHub,
+                                    create fantastic features and then make a pull request to us.
 
-                            <br><br>
+                                    <br><br>
 
-                            <a href="https://github.com/diverso-lab/uvlhub" target="_blank" class="btn btn-primary">
-                                Go to GitHub</a>
+                                    
+                                    <a href="https://github.com/cerveza-hub/cerveza-hub" target="_blank" class="btn btn-primary">
+                                        Go to GitHub</a>
+
+                                </div>
+
+                            </div>
 
                         </div>
 
