feat: load new logo

--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -40,11 +40,12 @@ chico sundermann">
         <div class="sidebar-content js-simplebar">
     <div style="display: flex; align-items: center;">
         <a class="sidebar-brand" href="{{ url_for('public.index') }}" style="flex-shrink: 0;">
-            <img src="{{ url_for("static", filename="img/logos/image.png") }}" 
+            <img src="{{ url_for("static", filename="img/logos/newLogo1.png") }}" 
                  class="d-block"
                  style="max-width: 50px; height: auto; margin-right: -12px;"> 
         </a>
-        <span style="font-size: 1.7em; color: #ffffff; font-weight: bold;">CERVEZAHUB</span>
+        <img src="{{ url_for('static', filename='img/logos/cervezaImg.png') }}"
+         style="height: 40px; margin-right: 10px;">
     </div>
 
             <ul class="sidebar-nav">
