--- a/app/modules/dataset/templates/dataset/view_dataset.html
+++ b/app/modules/dataset/templates/dataset/view_dataset.html
@@ -106,8 +106,8 @@
                     </div>
                     {% elif FLASK_ENV == 'development' %}
                     <div class="col-md-8 col-12">
-                        <a href="http://localhost:5000/api/deposit/depositions/{{ dataset.ds_meta_data.deposition_id }}" target="_blank">
-                            http://localhost:5000/api/deposit/depositions/{{ dataset.ds_meta_data.deposition_id }}
+                        <a href="http://localhost:5000/records/{{ dataset.ds_meta_data.deposition_id }}" target="_blank">
+                            http://localhost:5000/records/{{ dataset.ds_meta_data.deposition_id }}
                         </a>
                     </div>
                     {% else %}
